@@ -24,6 +24,7 @@ public:
   void DoWork();
   __int64 GetDelay(); // returns the time it takes to play a packet if we add one at this time
   void Flush();
+  void WaitForBuffer(int iPacketsLeft);
 
   IDirectSoundRenderer* m_pAudioDecoder;
 protected:
